# svaani--1

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  GCS_MIGRATION_PLAN.md  README.md  SVAANI_CODEBASE_SUMMARY.md  docker-compose.yml  last_user_input.txt  pyproject.toml  requirements.txt  write.md
.github/workflows/: ci.yml
.refact/buddy/: memory_ops.jsonl  runtime_queue.jsonl  state.json
.serena/: project.yml
app/: __init__.py  admin_routes.py  config.py  logging_config.py  logging_service.py  main.py  observability.py  store.py  store_sql.py  store_supabase.py
app/audio/: __init__.py  ws.py
app/data/: __init__.py  pg_pool.py  repo.py  repo_sql.py
app/eval/: __init__.py  bench.py  runner.py  (+4 more)
docs/: ARCHITECTURE.md  DOCUMENTATION.md  batch-mode-benchmark.md  llm-comparison.md
scripts/: add_ai_analysis_column.py  apply_observability_schema.py
supabase/: schema.sql
tests/: conftest.py  test_admin_api.py  test_audio_guard.py  test_auth_supabase.py  test_clinical_bench.py  test_complexity.py  test_eval_and_ab.py  test_fhir.py  test_finalize_modes.py  test_golden_multispeaker.py  test_grounding.py  test_hardening.py  test_intelligence_api.py  test_logging_service.py  test_no_rx.py  test_persistence.py  test_pipeline.py  test_prompt_versioning.py  test_review_sign.py  test_risk.py  test_schemas.py  test_subjects.py  test_template_create.py  test_templates.py  test_user_isolation.py
venv2/: pyvenv.cfg
web/: app.js  index.html  styles.css
web-app/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+149 files in other folders)
