[project]
name = "karaionyx-scribe"
version = "0.1.0"
description = "AI Medical Scribe — a faithful, grounded clinical documentation platform."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # Our own code must stay deprecation-clean: promote DeprecationWarning to an error...
    "error::DeprecationWarning",
    # ...except this third-party one we don't control: Starlette's TestClient warns that
    # httpx is deprecated in favour of httpx2 (issued on import, not by our code).
    "ignore:Using `httpx` with `starlette.testclient`:Warning",
]
